Added content for day 5

--- a/Day 5/cross-browser-css.html
+++ b/Day 5/cross-browser-css.html
@@ -62,3 +62,34 @@ color:red;
 
 Refer:
 http://rafael.adm.br/css_browser_selector/
+
+<style type="text/css">
+    .ie .example {
+        background-color: yellow
+    }
+    .ie7 .example {
+        background-color: orange
+    }
+    .gecko .example {
+        background-color: gray
+    }
+    .win.gecko .example {
+        background-color: red
+    }
+    .linux.gecko .example {
+        background-color: pink
+    }
+    .opera .example {
+        background-color: green
+    }
+    .konqueror .example {
+        background-color: blue
+    }
+    .webkit .example {
+        background-color: black
+    }
+    .example {
+        width: 100px;
+        height: 100px;
+    }
+</style>
