--- a/Day 5/cross-browser-css.html
+++ b/Day 5/cross-browser-css.html
@@ -1,3 +1,15 @@
+/* CSS Reset */
+
+html,body,div,ul,ol,li,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,fieldset,input,hr {margin:0; padding:0;}
+h1,h2,h3,h4,h5,h6,pre,code,address,caption,cite,code,em,strong,th {font-size:1em; font-weight:normal; font-style:normal;}
+ul,ol {list-style:none;}
+fieldset,img,hr {border:none;}
+caption,th {text-align:left;}
+table {border-collapse:collapse; border-spacing:0;}
+td {vertical-align:top;}
+
+
+
 <style>
 
     /* IE6 and below */
@@ -77,6 +89,7 @@ html:lang(en)>body selector { property:value; }
 
 Opera
 @media all and (min-width: 0px){ selector { property:value; } }
+
 
 Refer:
 http://rafael.adm.br/css_browser_selector/
